[package]
name = "bay"
version = "0.0.0"
authors = ["The Ocean Project Developers"]
description = "[WIP] The content-addressable data store for Ocean."
license = "AGPL-3.0-only"
homepage = "https://github.com/oceanpkg/bay"
repository = "https://github.com/oceanpkg/bay"
documentation = "https://docs.rs/bay"
edition = "2018"

[build-dependencies]
cargo-emit = "0.1"
version_check = "0.9"

[dependencies]
memmap = "0.7"
serde = { version = "1", features = ["derive"] }
sha2 = "0.8"
